--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-server.port=8081
+server.port=8888
+
+spring.security.user.name=metehan
+spring.security.user.password=1234
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_banking
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
 spring.datasource.username=postgres
 spring.datasource.password=toor
